# fpp-rust

./: .gitignore  Cargo.toml
fpp/: Cargo.toml
fpp/src/: main.rs
fpp_analysis/: Cargo.toml
fpp_analysis/src/: analysis.rs  errors.rs  lib.rs  test.rs
fpp_analysis/src/analyzers/: analyzer.rs  basic_use_analyzer.rs  nested_analyzer.rs  use_analyzer.rs
fpp_analysis/src/passes/: check.rs  check_expr_types.rs  check_type_uses.rs  check_use_def_cycles.rs  check_uses.rs  enter_symbols.rs  eval_constant_exprs.rs  eval_implied_enum_consts.rs  finalize_type_defs.rs
fpp_analysis/src/semantics/: format.rs  generic_name_symbol_map.rs  generic_nested_scope.rs  generic_scope.rs  implied_use.rs  name.rs  name_groups.rs  scope.rs  symbol.rs  types.rs  use_def_matching.rs  value.rs
fpp_analysis/src/test/: duplicate-symbols-multi.ref.txt  lib.rs  mod.rs
fpp_analysis/src/test/array/: default_error.ref.txt  enum_default_error.ref.txt  format_alias_float_not_int.ref.txt  format_alias_int_not_rational.ref.txt  format_alias_not_numeric.ref.txt  format_bad_syntax.ref.txt  format_float_not_int.ref.txt  format_int_not_rational.ref.txt  format_missing_repl.ref.txt  format_not_numeric.ref.txt  format_precision_too_large.ref.txt  format_too_many_repls.ref.txt  invalid_size.ref.txt  test.rs
fpp_analysis/src/test/command/: test.rs
fpp_analysis/src/test/component/: test.rs
fpp_analysis/src/test/component_instance_def/: test.rs
fpp_analysis/src/test/connection_direct/: test.rs
fpp_analysis/src/test/connection_pattern/: test.rs
fpp_analysis/src/test/constant/: array_index_negative.ref.txt  array_index_out_of_bounds.ref.txt  invalid_array_index_type.ref.txt  invalid_array_type.ref.txt  test.rs  undef_1.ref.txt  undef_2.ref.txt  undef_3.ref.txt
fpp_analysis/src/test/container/: test.rs
fpp_analysis/src/test/cycles/: alias.ref.txt  array.ref.txt  constant_1.ref.txt  constant_2.ref.txt  enum.ref.txt  enum_constant.ref.txt  interface.fpp  interface.ref.txt  struct.ref.txt  test.rs  topology.fpp  topology.ref.txt
fpp_analysis/src/test/defs/: duplicate-symbols-multi.ref.txt  duplicate-symbols-single.ref.txt  ok.fpp  test.rs
fpp_analysis/src/test/enums/: bad_alias_rep_type.ref.txt  bad_constant.ref.txt  bad_default.ref.txt  bad_rep_type.ref.txt  duplicate_value.ref.txt  invalid_constants.ref.txt  invalid_symbol.ref.txt  missing_constant.ref.txt  test.rs  tests.sh  undef_constant_1.ref.txt  undef_constant_2.ref.txt
fpp_analysis/src/test/event/: test.rs
fpp_analysis/src/test/expr/: add_error.ref.txt  array_empty.ref.txt  array_error.ref.txt  div_by_zero.ref.txt  dot_bad_expr.ref.txt  neg_error.ref.txt  struct_duplicate.ref.txt  test.rs
fpp_analysis/src/test/framework_defs/: test.rs
fpp_analysis/src/test/instance_spec/: test.rs
fpp_analysis/src/test/interface/: test.rs
fpp_analysis/src/test/internal_port/: test.rs
fpp_analysis/src/test/invalid_symbols/: constant_as_type.ref.txt  constant_integer_as_qualifier.ref.txt  module_as_constant.ref.txt  module_as_type.ref.txt  module_hides_constant.ref.txt  state_machine_as_qualifier.ref.txt  test.rs  topology_as_qualifier.ref.txt  type_as_constant.ref.txt
fpp_analysis/src/test/param/: test.rs
fpp_analysis/src/test/port/: test.rs
fpp_analysis/src/test/port_instance/: test.rs
fpp_analysis/src/test/port_matching/: test.rs
fpp_analysis/src/test/port_numbering/: test.rs
fpp_analysis/src/test/record/: test.rs
fpp_analysis/src/test/redef/: array.ref.txt  component.ref.txt  component_array.ref.txt  component_enum.ref.txt  component_instance.ref.txt  component_instance_module.ref.txt  component_state_machine.ref.txt  component_struct.ref.txt  constant.ref.txt  constant_in_module.ref.txt  constant_module.ref.txt  enum.ref.txt  enum_constant.ref.txt  enum_module.ref.txt  module_component.ref.txt  module_component_instance.ref.txt  module_constant.ref.txt  module_enum.ref.txt  module_port.ref.txt  module_state_machine.ref.txt  module_topology.ref.txt  module_type.ref.txt  port.ref.txt  port_module.ref.txt  state_machine.ref.txt  struct.ref.txt  test.rs  topology.ref.txt  topology_module.ref.txt  type.ref.txt  type_module.ref.txt
fpp_analysis/src/test/spec_init/: test.rs
fpp_analysis/src/test/spec_loc/: test.rs
fpp_analysis/src/test/state_machine/: test.rs
fpp_analysis/src/test/state_machine_instance/: test.rs
fpp_analysis/src/test/structs/: default_error.ref.txt  duplicate_names.ref.txt  format_alias_not_numeric.ref.txt  format_bad_syntax.ref.txt  format_not_numeric.ref.txt  (+5 more)
fpp_analysis/src/tests/: duplicate-symbols-multi.fpp  duplicate-symbols-multi.ref.txt  duplicate-symbols-single.ref.txt  duplicate-symbols.fpp  duplicate-symbols.ref.txt
fpp_derive/: Cargo.toml
fpp_derive/src/: annotated.rs  lib.rs  node.rs
fpp_lsp/: Cargo.toml  README.md
fpp_lsp/src/: context.rs  dispatcher.rs  global_state.rs  main.rs  semantic_tokens.rs
fpp_lsp_server/: Cargo.toml
fpp_lsp_server/src/: analysis.rs  context.rs  diagnostics.rs  dispatcher.rs  global_state.rs  handlers.rs  lsp_ext.rs  main.rs  notification.rs  progress.rs  request.rs  semantic_tokens.rs  task.rs  util.rs
fpp_lsp_server/src/lsp/: capabilities.rs  mod.rs  semantic_tokens.rs  utils.rs
fpp_lsp_server/src/vfs/: file.rs  mod.rs
fpp_macros/: Cargo.toml
fpp_macros/src/: annotated.rs  enum_map.rs  lib.rs  node.rs  util.rs  visitable.rs
fpp_parser/: Cargo.toml  README.md
fpp_parser/src/: cursor.rs  error.rs  include.rs  lexer.rs  lib.rs  parser.rs  token.rs  tokenizer.rs
fpp_parser/src/tests/: comments.ref.txt  cursor.rs  cycle-1.ref.txt  cycle-2.ref.txt  cycle-3.ref.txt  embedded-tab.ref.txt  empty.ref.txt  escaped-strings.ref.txt  illegal-character.ref.txt  include-component.ref.txt  include-constant-1.ref.txt  include-missing-file.ref.txt  include-module.ref.txt  include-parse-error.ref.txt  include-subdir.ref.txt  include-topology.ref.txt  include_constant_1.ref.txt  lexer.rs  parse-error.fpp  parse-error.ref.txt  parser.rs  state-machine.ref.txt  syntax-kwd-names.ref.txt  syntax.fpp  syntax.ref.txt  topology-ports.ref.txt  topology.fpp  topology.ref.txt
(+147 files in other folders)
