[workspace]
members = [
    "fpp",
    "fpp_ast",
    "fpp_core",
    "fpp_derive",
    "fpp_parser"
]

resolver = "2"

[patch.crates-io]
fpp = { path = "fpp" }

[workspace.dependencies]
proc-macro2 = { version = "1.0.74", default-features = false }
quote = { version = "1.0.35", default-features = false }
syn = { version = "2.0.81", default-features = false }
