[workspace]
members = [
    "fpp",
    "fpp_analysis",
    "fpp_ast",
    "fpp_core",
    "fpp_errors",
    "fpp_fs",
    "fpp_lexer",
    "fpp_lsp_server",
    "fpp_lsp_parser",
    "fpp_macros",
    "fpp_parser",
    "fpp_util",
]

# Exclude fpp_macros from test suite
default-members = [
    "fpp",
    "fpp_lsp_server",
    "fpp_analysis",
    "fpp_ast",
    "fpp_core",
    "fpp_errors",
    "fpp_parser",
    "fpp_lsp_parser",
    "fpp_util"
]

resolver = "2"

[patch.crates-io]
fpp = { path = "fpp" }

[profile.release]
strip = "debuginfo"
lto = true
