[package]
name = "fpp_analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
fpp_ast = { path = "../fpp_ast" }
fpp_core = { path = "../fpp_core" }
fpp_util = { path = "../fpp_util" }
fpp_macros = { path = "../fpp_macros" }
fpp_errors = { path = "../fpp_errors" }
fpp_parser = { path = "../fpp_parser" }

[dev-dependencies]
pretty_assertions = "1.4.1"
