[package]
name = "fpp_derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true
name = "fpp_derive"
path = "src/lib.rs"

[dependencies]
proc-macro2 = { workspace = true, features = ["proc-macro"] }
quote = { workspace = true, features = ["proc-macro"] }
syn = { workspace = true, features = ["clone-impls", "derive", "parsing", "printing", "proc-macro"] }
