[package]
name = "fpp_lsp_server"
version = "0.1.0"
edition = "2024"

[dependencies]
fpp_analysis = { path = "../fpp_analysis" }
fpp_ast = { path = "../fpp_ast" }
fpp_core = { path = "../fpp_core" }
fpp_parser = { path = "../fpp_parser" }
fpp_lsp_parser = { path = "../fpp_lsp_parser" }

lsp-server = "=0.7.9"
serde_json = "1.0.145"
lsp-types = "0.97.0"
rustc-hash = "2.1.1"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.41"
anyhow = "1.0.100"
threadpool = "1.8.1"
crossbeam-channel = "0.5.15"
tracing-subscriber = { version =  "0.3.22", features = ["chrono"] }
url = "2"
ignore = "0.4"
