[package]
name = "fpp_macros"

version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
proc-macro = true
name = "fpp_macros"
path = "src/lib.rs"

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.41"
syn = { version = "2.0.108", features = ["full"] }
synstructure = "0.13.2"
