[package]
name = "fpp_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
memchr = "2.7.4"
fpp_core = { path = "../fpp_core" }
fpp_ast = { path = "../fpp_ast" }
rustc-hash = "2.1.1"

[dev-dependencies]
fpp_errors = { path = "../fpp_errors" }
fpp_fs = { path = "../fpp_fs" }
pretty_assertions = "1.4.1"
